no brokenaxes, true pearson SE, tidy up

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -1161,21 +1161,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"xtick.major.size\"] = 6\n",
-    "plt.rcParams[\"xtick.minor.size\"] = 3\n",
-    "plt.rcParams[\"ytick.major.size\"] = 6\n",
-    "plt.rcParams[\"ytick.minor.size\"] = 3\n",
-    "\n",
-    "plt.rcParams[\"font.size\"] = 19"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from scipy.optimize import curve_fit\n",
     "\n",
     "class Func():\n",
@@ -1193,7 +1178,8 @@
     "    def __init__(self, p0=[10]):\n",
     "        self.func = lambda x,a: a/(np.sqrt(x))\n",
     "        self.name = \"inverse_square\"\n",
-    "        self.label = r\"$f(n)=\\frac{a}{\\sqrt{n}}$\"\n",
+    "#         self.label = r\"$f(n)=\\frac{a}{\\sqrt{n}}$\"\n",
+    "        self.label = r\"$f(n)\\propto\\frac{1}{\\sqrt{n}}$\"\n",
     "        self.p0 = p0\n",
     "        \n",
     "def show_fit_params_text(ax, Func, x_eq=0.6,y_eq=0.42, color=\"grey\", ndec_text=2, alpha=1, size=13, units=\"\"):\n",
@@ -1212,7 +1198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68",
+   "id": "67",
    "metadata": {},
    "source": [
     "#### In bulk"
@@ -1221,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74",
+   "id": "73",
    "metadata": {},
    "source": [
     "#### Individually"
@@ -1528,20 +1514,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dicts = {\n",
-    "    MF.load_dic_from_json(filename=base_path+\"3.5b4.5/0R3.5/-2l2/anicorr_4age7_5000repeats_50size5000_100stepsLog.json\"),\n",
-    "    MF.load_dic_from_json(filename=base_path+\"3.5b4.5/0R3.5/-2l2/anicorr_9.5age10_5000repeats_50size5000_100stepsLog.json\"),\n",
-    "}"
+    "all_dicts = [\n",
+    "    MF.load_dic_from_json(filename=base_path+\"3b6/0R3.5/-2l2/anicorr_4age7_500repeats_50size5000_100stepsLog.json\"),\n",
+    "    MF.load_dic_from_json(filename=base_path+\"3b6/0R3.5/-2l2/anicorr_9.5age10_500repeats_50size5000_100stepsLog.json\"),\n",
+    "    MF.load_dic_from_json(filename=base_path+\"3b6/0R2/-2l2/anicorr_4age7_500repeats_50size5000_100stepsLog.json\"),\n",
+    "    MF.load_dic_from_json(filename=base_path+\"3b6/0R2/-2l2/anicorr_9.5age10_500repeats_50size5000_100stepsLog.json\"),\n",
+    "#     MF.load_dic_from_json(filename=base_path+\"3b6/0R3.5/-2l2/anicorr_4age7_5000maxsize_5000repeats.json\"),\n",
+    "#     MF.load_dic_from_json(filename=base_path+\"3b6/0R3.5/-2l2/anicorr_9.5age10_5000maxsize_5000repeats.json\"),\n",
+    "]\n",
+    "\n",
+    "colors = [\"blue\",\"red\",\"cyan\",\"orange\"]\n",
+    "labels = [\"Young (R<3.5)\",\"Old (R<3.5)\", \"Young (R<2)\",\"Old (R<2)\"]\n",
+    "\n",
+    "for dic,color,label in zip(all_dicts,colors,labels):\n",
+    "    dic[\"color\"] = color\n",
+    "    dic[\"label\"] = None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,6 +1549,19 @@
     "    sampling_sizes = np.int64(np.round(10**np.linspace(np.log10(50),np.log10(5000),100)))\n",
     "else:\n",
     "    sampling_sizes = np.arange(50,5000+50,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_sampling_size = max(sampling_sizes)\n",
+    "xtick_step = 500\n",
+    "major_locator = 1000\n",
+    "minor_locator = 250"
    ]
   },
   {
@@ -1581,15 +1591,25 @@
     "fit_bool = True\n",
     "# fit_bool = False\n",
     "\n",
+    "same_fits_all_dicts = {\n",
+    "    \"anisotropy\": False,\n",
+    "    \"correlation\": False,\n",
+    "    \"tilt_abs\": False\n",
+    "}\n",
+    "\n",
     "# fit_func = ReciprocalFunc(p0=[1,10,10])\n",
     "fit_func = InverseSquareFunc(p0=[1])\n",
     "\n",
-    "if xlog_bool and ylog_bool:\n",
-    "    x_eq,y_eq = 0.75, 0.15\n",
-    "elif xlog_bool:\n",
-    "    x_eq,y_eq = 0.65,0.4\n",
-    "else:\n",
-    "    x_eq,y_eq = 0.4, 0.4"
+    "# fit_params_text_bool = True\n",
+    "fit_params_text_bool = False\n",
+    "\n",
+    "if fit_params_text_bool:\n",
+    "    if xlog_bool and ylog_bool:\n",
+    "        x_eq,y_eq = 0.75, 0.15\n",
+    "    elif xlog_bool:\n",
+    "        x_eq,y_eq = 0.65,0.4\n",
+    "    else:\n",
+    "        x_eq,y_eq = 0.4, 0.4"
    ]
   },
   {
@@ -1599,10 +1619,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "show_true_pearson_standard_error = True\n",
+    "# show_true_pearson_standard_error = False\n",
+    "\n",
+    "def pearson_standard_error(n_plot, correlation):\n",
+    "    return (1-correlation**2)/np.sqrt(n_plot - 3); # https://doi.org/10.1525/collabra.87615\n",
+    "#     return (1-correlation**2)/np.sqrt(n_plot - 2) # https://en.youscribe.com/BookReader/Index/520541/?documentId=491664\n",
+    "#     return (1-correlation**2)/np.sqrt(n_plot) # https://www.tandfonline.com/doi/abs/10.1080/01621459.1928.10502991\n",
+    "pearson_se_label = r\"$\\frac{1-\\rho^2}{\\sqrt{n-3}}$\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hard_coded_ylims_dict = {\n",
-    "    \"anisotropy\": [0 if not ylog_bool else 0.001,0.3],\n",
-    "    \"correlation\": [0 if not ylog_bool else 0.001,0.149],\n",
-    "    \"tilt_abs\": [0 if not ylog_bool else 0.1,33]\n",
+    "#     \"anisotropy\": [0 if not ylog_bool else 0.001,0.3],\n",
+    "#     \"correlation\": [0 if not ylog_bool else 0.001,0.149],\n",
+    "#     \"tilt_abs\": [0 if not ylog_bool else 0.1,33]\n",
     "}\n",
     "\n",
     "if xlog_bool and ylog_bool:\n",
@@ -1613,22 +1650,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MC_error_bool = xlog_bool and ylog_bool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_bool = True\n",
-    "# save_bool = False"
+    "# brokenaxes = True\n",
+    "brokenaxes = False\n",
+    "\n",
+    "MC_error_bool = brokenaxes and xlog_bool and ylog_bool\n",
+    "bootstrap_error_bool = brokenaxes\n",
+    "\n",
+    "figsize = (8,10) if brokenaxes else (10,10)\n",
+    "if brokenaxes: # reduce tick size\n",
+    "    plt.rcParams[\"xtick.major.size\"] = 6\n",
+    "    plt.rcParams[\"xtick.minor.size\"] = 3\n",
+    "    plt.rcParams[\"ytick.major.size\"] = 6\n",
+    "    plt.rcParams[\"ytick.minor.size\"] = 3\n",
+    "plt.rcParams[\"font.size\"] = 19"
    ]
   },
   {
@@ -1638,15 +1676,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save_bool = True\n",
+    "save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "width_broken_axes = 0.13\n",
     "nrows = len(function_dict)\n",
     "\n",
-    "fig,axs = plt.subplots(figsize=(8,10),ncols=3,nrows=nrows,gridspec_kw={\"width_ratios\":[1]+2*[width_broken_axes],\"wspace\":0.1,\"hspace\":0})\n",
+    "fig,axs = plt.subplots(figsize=figsize,ncols=3,nrows=nrows,gridspec_kw={\"width_ratios\":[1]+2*[width_broken_axes],\"wspace\":0.1,\"hspace\":0})\n",
     "\n",
     "for row,func in enumerate(function_dict):\n",
     "    lax,cax,rax = axs[row]\n",
     "\n",
-    "    if True: # broken axes\n",
+    "    if brokenaxes: # broken axes\n",
     "\n",
     "        d = 0.02\n",
     "        d_factor = 1/width_broken_axes\n",
@@ -1667,11 +1716,14 @@
     "            \n",
     "            ax.plot((-d_factor*d,+d_factor*d), (1-d,1+d), transform=ax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
     "            ax.plot((-d_factor*d,+d_factor*d), (-d,d), transform=ax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
+    "    else:\n",
+    "        fig.delaxes(cax)\n",
+    "        fig.delaxes(rax)\n",
     "    \n",
     "    if True: # plot\n",
     "        for dic in all_dicts:\n",
     "            lax.plot(sampling_sizes[sampling_sizes <= max_sampling_size],np.array(dic[func+\"_errors\"])[sampling_sizes <= max_sampling_size],\\\n",
-    "                     label=dic[\"label\"],color=dic[\"color\"],alpha=0.7)\n",
+    "                     label=dic[\"label\"] if row==0 else None,color=dic[\"color\"],alpha=0.7)\n",
     "\n",
     "        for dic,ax in zip(all_dicts,[cax,rax]):\n",
     "            ax.scatter(dic[\"total_N\"],dic[func+\"_bootstrap_error\"],marker=\"*\",color=dic[\"color\"])\n",
@@ -1681,8 +1733,9 @@
     "                ax.scatter(dic[\"total_N\"],dic[func+\"_MC_d_0.2_error_high\"],marker=\"^\",color=dic[\"color\"],s=23)\n",
     "            \n",
     "            ax.set_xticks([dic[\"total_N\"]])\n",
-    "                        \n",
-    "        lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\") # just for the legend label\n",
+    "        \n",
+    "        if bootstrap_error_bool:\n",
+    "            lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\") # just for the legend label\n",
     "        \n",
     "        if MC_error_bool:\n",
     "            lax.scatter(x=-100,y=0,marker=\"v\",color=\"k\",label=\"MC 20% distance error\",s=23) # just for the legend label\n",
@@ -1693,7 +1746,8 @@
     "            lax.set_xscale(\"log\")\n",
     "        \n",
     "        lax_leftlim = 40 if xlog_bool else 0\n",
-    "        lax.set_xlim(lax_leftlim,max_sampling_size+minor_locator*0.9)\n",
+    "        lax_rightlim = max_sampling_size+minor_locator*0.9 if not logSampling else max_sampling_size+10**(MF.get_exponent(max_sampling_size))\n",
+    "        lax.set_xlim(lax_leftlim,lax_rightlim)\n",
     "        \n",
     "        if not xlog_bool:\n",
     "            lax.xaxis.set_major_locator(ticker.MultipleLocator(major_locator))\n",
@@ -1711,8 +1765,8 @@
     "            \n",
     "            if func in hard_coded_ylims_dict:\n",
     "                ax.set_ylim(hard_coded_ylims_dict[func])\n",
-    "            else:\n",
-    "                ax.set_ylim(bottom=0.005 if ylog_bool else 0)\n",
+    "#             else:\n",
+    "#                 ax.set_ylim(bottom=0.005 if ylog_bool else 0)\n",
     "\n",
     "            if row != nrows - 1:\n",
     "                ax.xaxis.set_ticklabels([])\n",
@@ -1721,66 +1775,103 @@
     "    if fit_bool:\n",
     "\n",
     "        x_plot = np.linspace(min(sampling_sizes),max_sampling_size,500)\n",
-    "\n",
-    "        if func != \"tilt_abs\" and same_youngold_fits:\n",
+    "        \n",
+    "        if same_fits_all_dicts[func]:\n",
     "            fit_func.fit(x = sampling_sizes[sampling_sizes<=max_sampling_size], y = np.array(all_dicts[0][func+\"_errors\"])[sampling_sizes<=max_sampling_size])\n",
     "            lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=\"grey\", linestyle=\"--\")\n",
-    "            show_fit_params_text(ax=lax,Func=fit_func,color=\"grey\",x_eq=x_eq,y_eq=y_eq)\n",
-    "        else:\n",
+    "            \n",
+    "            if fit_params_text_bool:\n",
+    "                show_fit_params_text(ax=lax,Func=fit_func,color=\"grey\",x_eq=x_eq,y_eq=y_eq)\n",
+    "        elif not (func == \"correlation\" and show_true_pearson_standard_error):\n",
     "            for (pop_idx,color,y) in zip([0,1],[\"blue\",\"red\"],[y_eq-0.04,y_eq+0.04]):\n",
     "                fit_func.fit(x = sampling_sizes[sampling_sizes<=max_sampling_size], y = np.array(all_dicts[pop_idx][func+\"_errors\"])[sampling_sizes<=max_sampling_size])\n",
     "\n",
     "                lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=color, linestyle=\"--\",alpha=0.5)\n",
-    "                show_fit_params_text(ax=lax,Func=fit_func,alpha=0.7,color=color,x_eq=x_eq,y_eq=y,units=mapf.get_units(func))\n",
-    "\n",
-    "        lax.plot([-100,-100],[0,1],label=fit_func.label,linestyle=\"--\",color=\"grey\") # just for the legend label\n",
     "                \n",
+    "                if fit_params_text_bool:\n",
+    "                    show_fit_params_text(ax=lax,Func=fit_func,alpha=0.7,color=color,x_eq=x_eq,y_eq=y,units=mapf.get_units(func))\n",
+    "        \n",
+    "        if row == 0:\n",
+    "            lax.plot([-100,-99],[np.mean(dic[\"anisotropy_errors\"]),np.mean(dic[\"anisotropy_errors\"])],\\\n",
+    "                     linestyle=\"--\",color=\"grey\",label=fit_func.label) # just for the legend label\n",
+    "    \n",
+    "    if func == \"correlation\" and show_true_pearson_standard_error:\n",
+    "        for dic in all_dicts:\n",
+    "            lax.plot(x_plot,pearson_standard_error(x_plot,dic[\"correlation\"]),color=dic[\"color\"],alpha=0.5,linestyle=\"dotted\")\n",
+    "        \n",
+    "        lax.plot([0],[0],color=\"k\",linestyle=\"dotted\",label=pearson_se_label) # for legend\n",
+    "    \n",
     "    if True: # labels, legend, text\n",
     "        if row == nrows-1:\n",
-    "#             lax.set_xlabel(\"Sample size\"); lax.text(s=r\"Total $N$\",x=1.1,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
-    "            lax.text(s=\"Sample size\",x=0.5,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
-    "\n",
-    "        if row == 0:\n",
-    "            fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7),framealpha=0 if xlog_bool and ylog_bool else 1)\n",
-    "        elif row == 1:\n",
-    "            lax.set_ylabel(r\"Standard error\")\n",
+    "            if brokenaxes:\n",
+    "#                 lax.set_xlabel(\"Sample size\"); lax.text(s=r\"Total $N$\",x=1.1,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
+    "                lax.text(s=\"Sample size\",x=0.5,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
+    "            else:\n",
+    "                lax.set_xlabel(\"Sample size\");\n",
     "        \n",
     "        if xlog_bool and ylog_bool:\n",
     "            x_func_text = 0.98\n",
     "        elif xlog_bool:\n",
-    "            x_func_text = 0.3\n",
+    "            x_func_text = 0.6\n",
     "        else:\n",
     "            x_func_text = 0.2\n",
-    "        fig.text(s=mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")],x=x_func_text,y=0.83,transform=lax.transAxes,size=15)\n",
+    "        \n",
+    "        func_str = mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")]\n",
+    "            \n",
+    "        if not brokenaxes:\n",
+    "            x_func_text -= 0.27 if xlog_bool else 0\n",
+    "        fig.text(s=func_str,x=x_func_text,y=0.83,transform=lax.transAxes,size=\"small\")\n",
+    "        \n",
+    "        if row == 0:\n",
+    "            if brokenaxes:\n",
+    "                fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7),framealpha=0 if xlog_bool and ylog_bool else 1)\n",
+    "            else:\n",
+    "                lax.legend(loc=\"lower left\")\n",
+    "        elif row == 1:\n",
+    "            lax.set_ylabel(r\"Standard error\")\n",
+    "            \n",
+    "            if show_true_pearson_standard_error and func == \"correlation\":\n",
+    "                lax.legend(loc=\"lower left\" if xlog_bool and ylog_bool else \"upper right\")\n",
     "        \n",
     "        fig.align_labels()\n",
-    "\n",
+    "        \n",
     "if True: # filename, save and show\n",
     "    save_path = get_save_path_spatial_cuts(save_path=base_path, spatial_cuts_dict=all_dicts[0][\"spatial_cuts\"])\n",
-    "    \n",
+    "\n",
     "    if list(function_dict.keys()) == [\"anisotropy\",\"correlation\",\"tilt_abs\"]:\n",
     "        filename = \"anicorr\"\n",
     "    else:\n",
     "        raise ValueError(\"Please specify map list name\")\n",
-    "    \n",
+    "\n",
+    "    filename += \"_\"+MF.extract_str_from_cuts_dict(dic[\"spatial_cuts\"])\n",
+    "\n",
     "    for dic in all_dicts:\n",
     "        filename += '_'+MF.extract_str_from_cuts_dict(dic[\"pop_cuts\"])\n",
-    "    \n",
+    "\n",
     "    if xlog_bool and ylog_bool:\n",
     "        filename += \"_xylog\"\n",
     "    elif xlog_bool:\n",
     "        filename += \"_xlog\"\n",
     "    elif ylog_bool:\n",
     "        filename += \"_ylog\"\n",
-    "    \n",
+    "\n",
+    "    filename += f\"_{repeats}repeats\"\n",
+    "    filename += f\"_{min(sampling_sizes)}size{max(sampling_sizes)}\"\n",
+    "    filename += f\"_{len(sampling_sizes)}steps\" + (\"Log\" if logSampling else \"\")\n",
+    "\n",
+    "    if fit_bool:\n",
+    "        if not same_youngold_fits:\n",
+    "            filename += \"_diffFits\"\n",
+    "        if not fit_params_text_bool:\n",
+    "            filename += \"_noFitParams\"\n",
+    "    else:\n",
+    "        filename += \"_noFit\"\n",
+    "        \n",
     "    if MC_error_bool:\n",
     "        filename += \"_MC\"\n",
     "        \n",
-    "    filename += f\"_{max_sampling_size}maxsize\"\n",
-    "    filename += f\"_{repeats}repeats\"\n",
-    "    \n",
-    "    if not fit_bool:\n",
-    "        filename += \"_noFit\"\n",
+    "    if not brokenaxes:\n",
+    "        filename += \"_noBroken\"\n",
     "        \n",
     "    print(filename)\n",
     "    \n",
@@ -1793,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": []
