more tidy up of indiv variables

--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -6,6 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" Jupyter notebook themes\n",
+    "\n",
+    "Check the list of themes\n",
+    "!jt -l\n",
+    "\n",
+    "My favourite dark mode is \"onedork\". Uncomment the first line below to set it, i.e.\n",
+    "!jt -t onedork -T\n",
+    "\n",
+    "To revert to the default theme, uncomment the second line below, i.e.\n",
+    "!jt -r\n",
+    "\n",
+    "For the change to take effect, just refresh the page. You don't need to restart the kernel\n",
+    "\"\"\";\n",
+    "\n",
     "# !jt -t onedork -T\n",
     "# !jt -r"
    ]
@@ -37,7 +51,6 @@
     "import scipy.stats as stat\n",
     "from scipy.spatial import KDTree\n",
     "import copy\n",
-    "import time\n",
     "import os"
    ]
   },
@@ -48,8 +61,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "from matplotlib.colors import LogNorm\n",
     "import matplotlib.ticker as ticker\n",
     "from matplotlib import colormaps as mplcmaps\n",
     "import matplotlib.cm as cm\n",
@@ -64,14 +75,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import src.compute_variables as CV\n",
-    "import src.bootstrap_errors as bootstrap\n",
     "import src.variable_values_and_errors as val_err\n",
-    "\n",
+    "from src.errorconfig import BootstrapConfig, MonteCarloConfig\n",
     "\n",
     "import utils.miscellaneous_functions as MF\n",
-    "import utils.load_sim\n",
-    "import utils.load_data\n",
+    "import utils.load_sim as load_sim\n",
+    "import utils.load_data as load_data\n",
     "import utils.coordinates as coordinates\n",
     "\n",
     "import plotting.map_functions as mapf\n",
@@ -267,7 +276,7 @@
     "        \n",
     "    return save_path\n",
     "\n",
-    "def get_save_path_final(save_path_pop, binning_str, pop_str, error_type, error_repeat, montecarloconfig=None, bootstrapconfig=None):\n",
+    "def get_save_path_final(save_path_pop, binning_str, pop_str, error_type, montecarloconfig=None, bootstrapconfig=None):\n",
     "    \n",
     "    save_path = save_path_pop\n",
     "    \n",
@@ -303,7 +312,7 @@
     "            raise ValueError(f\"bootstrapconfig was None but it needs to be specified when working with bootstrap errors.\")\n",
     "        \n",
     "        save_path += \"bootstrap\"\n",
-    "        if bootstrapconfig.replacement is False:\n",
+    "        if bootstrapconfig.replace is False:\n",
     "            save_path += \"_noReplace\"\n",
     "        if bootstrapconfig.symmetric is False:\n",
     "            save_path += \"_Asymmetric\"\n",
@@ -311,8 +320,8 @@
     "            \n",
     "        MF.create_dir(save_path)\n",
     "        \n",
-    "        if bootstrapconfig.bootstrap_size is not None:\n",
-    "            save_path += f\"bootsize_{bootstrapconfig.bootstrap_size}/\"\n",
+    "        if bootstrapconfig.sample_size is not None:\n",
+    "            save_path += f\"bootsize_{bootstrapconfig.sample_size}/\"\n",
     "            MF.create_dir(save_path)\n",
     "        \n",
     "        if bootstrapconfig.repeats != 500:\n",
@@ -411,202 +420,6 @@
    "metadata": {},
    "source": [
     "## Observations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Gibs "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "general_path = \"C:/Users/Luismi/JUPYTER_NOTEBOOKS/MRes_UCLan/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.DataFrame(np.genfromtxt(general_path + \"Oscar_data/gibs_vvvPMs.dat\", names=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delete_columns = data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns_to_keep = ['l','b','Vgc','FeH','mul_grs','mub_grs']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delete_columns = delete_columns.drop(columns_to_keep)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(columns=delete_columns, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.dropna(how='any',inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fixed_distance = 8 #8.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['vl']=(fixed_distance*3.086e16)*data.mul_grs.values*((np.pi/(180 * 3600))*10**(-3)/(3.1536e7))\n",
-    "data['vb']=(fixed_distance*3.086e16)*data.mub_grs.values*((np.pi/(180 * 3600))*10**(-3)/(3.1536e7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"vr\"] = data[\"Vgc\"]\n",
-    "#data[\"vr\"] = np.sqrt(data[\"Vgc\"]**2 - data[\"vl\"]**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(columns = ['Vgc','mul_grs','mub_grs'],inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.loc[data.l > 180, 'l'] -= 360"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Visualise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_path = general_path+'708main_simulation/graphs/Oscar/GIBS/'\n",
-    "print(\"Saving in:\",save_path)\n",
-    "\n",
-    "save_bool = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "fullrange = True\n",
-    "\n",
-    "lim = 1000\n",
-    "if not fullrange:\n",
-    "    ax.set_xlim(-lim,lim)\n",
-    "    bins = np.linspace(-lim,lim,100)\n",
-    "else:\n",
-    "    bins = 100\n",
-    "    ax.text(x=0.03,y=0.06,s=str(len(np.where(data['vl'] < -1000)[0])),color='blue',transform=ax.transAxes)\n",
-    "lw = 3\n",
-    "alpha = 0.5\n",
-    "a_n,a_bins,_ = ax.hist(data['vl'],bins=bins,alpha=alpha, color='blue',label=r'GIBS $v_l$')\n",
-    "ax.plot([np.mean(data['vl']),np.mean(data['vl'])],[0,np.max(a_n)],alpha=1,color='blue',lw=lw,linestyle='-.')\n",
-    "\n",
-    "b_n,_,_ = ax.hist(data['vr'],bins=bins if not fullrange else a_bins,alpha=alpha, color='cyan',label=r'GIBS $v_r$')\n",
-    "ax.plot([np.mean(data['vr']),np.mean(data['vr'])],[0,np.max(b_n)],alpha=1,color='cyan',lw=lw,linestyle='-.')\n",
-    "\n",
-    "ax.set_xlabel(r\"Velocity $[\\mathrm{km \\hspace{0.3} s^{-1}}]$\")\n",
-    "ax.set_ylabel(r\"$N$\", rotation=0,labelpad=20)\n",
-    "plt.legend(loc='best')\n",
-    "if save_bool:\n",
-    "    filename = 'velocities_fullrange' if fullrange else 'velocities'\n",
-    "    plt.savefig(save_path+filename+'.png',bbox_inches='tight',dpi=150)\n",
-    "    print(save_path+filename+'.png')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Apogee"
    ]
   },
   {
@@ -880,9 +693,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_resampled_bool = True\n",
+    "sim_resampled_likedata_bool = True\n",
     "\n",
-    "if sim_resampled_bool:\n",
+    "if sim_resampled_likedata_bool:\n",
     "    df0 = sim_resampled\n",
     "    \n",
     "    del sim_resampled"
@@ -1164,7 +977,7 @@
     "            \"n_points\": 10,\n",
     "            \"binning_type\": \"equal_steps\",\n",
     "            \"error_type\": \"bootstrap\",\n",
-    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replacement=False,bootstrap_size=950,symmetric=False),\n",
+    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replace=False,sample_size=950,symmetric=False),\n",
     "        },\n",
     "        {\n",
     "            \"x_var\": \"age\", \n",
@@ -1175,7 +988,7 @@
     "            \"n_points\": 10,\n",
     "            \"binning_type\": \"equal_steps\",\n",
     "            \"error_type\": \"bootstrap\",\n",
-    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replacement=False,bootstrap_size=850,symmetric=False),\n",
+    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replace=False,sample_size=850,symmetric=False),\n",
     "        },\n",
     "        {\n",
     "            \"x_var\": \"age\", \n",
@@ -1186,7 +999,7 @@
     "            \"n_points\": 10,\n",
     "            \"binning_type\": \"equal_steps\",\n",
     "            \"error_type\": \"bootstrap\",\n",
-    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replacement=False,bootstrap_size=750,symmetric=False),\n",
+    "            \"bootstrapconfig\": BootstrapConfig(repeats=500,replace=False,sample_size=750,symmetric=False),\n",
     "        },\n",
     "    ]"
    ]
@@ -1301,7 +1114,7 @@
     "            save_path_pop = get_save_path_sim(save_path_spatial,sim_choice=sim_choice,age_lims=pop_dict[\"age\"],bar_angle=rot_angle,\\\n",
     "                                              resampled_likedata_bool=sim_resampled_likedata_bool,random_resampling_N=random_resampling_N,random_seed=random_seed)\n",
     "\n",
-    "        save_path,save_path_binning = get_save_path_final(save_path_pop, binning_str=binning_type,pop_str=pop_str, error_type=error_type,error_repeat=error_repeat,\\\n",
+    "        save_path,save_path_binning = get_save_path_final(save_path_pop, binning_str=binning_type,pop_str=pop_str, error_type=error_type,\\\n",
     "                                                          montecarloconfig=montecarloconfig, bootstrapconfig=bootstrapconfig)\n",
     "\n",
     "        print(\"save_path:\",save_path)\n",
@@ -1604,8 +1417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = get_save_path_sim(save_path_spatial, bar_angle=rot_angle,resampled_sim_bool=sim_resampled_bool, age_lims=age_lims,\\\n",
-    "                              binning_str=binning_str, pop_str=pop_str)\n",
+    "save_path = get_save_path_sim(save_path_spatial, sim_choice=sim_choice, bar_angle=rot_angle, resampled_likedata_bool=sim_resampled_likedata_bool,\\\n",
+    "                              age_lims=age_lims, random_resampling_N=random_resampling_N, random_seed=random_seed)\n",
     "\n",
     "print(save_path)"
    ]
