--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " plt.rcParams[\"font.size\"] = 20"
+    "plt.rcParams[\"font.size\"] = 20"
    ]
   },
   {
@@ -562,7 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_boot,_,boot_vals = CE.get_std_bootstrap(function=func,vx=df[\"v\"+vel_x_var].values,vy=df[\"v\"+vel_y_var].values,\\\n",
+    "std_boot,_,boot_vals = bootstrap.get_std_bootstrap(function=func,vx=df[\"v\"+vel_x_var].values,vy=df[\"v\"+vel_y_var].values,\\\n",
     "                                            bootstrapconfig= BootstrapConfig(repeats=repeats))\n",
     "\n",
     "print(\"Bootstrap error:\",std_boot)"
@@ -596,6 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TO-DO\n",
     "\n",
     "montecarloconfig = MonteCarloConfig(perturbed_vars=perturbed_vars,affected_cuts_dict=affected_cuts_dict,error_frac=frac_error,repeats=repeats,symmetric=False)"
    ]
@@ -650,10 +651,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_MC_low,std_MC_high, MC_values, within_cut = CE.get_std_MC(function=func,df=df_MC,montecarloconfig=montecarloconfig,true_value=true_value,\\\n",
+    "std_MC_low,std_MC_high, MC_values, within_cut = monte_carlo.get_std_MC(function=func,df=df_MC,montecarloconfig=montecarloconfig,true_value=true_value,\\\n",
     "                                                               vel_x_var=vel_x_var,vel_y_var=vel_y_var)\n",
     "\n",
-    "std_boot,_,boot_vals = CE.get_std_bootstrap(function=func,vx=df[f\"v{vel_x_var}\"].values,vy=df[f\"v{vel_y_var}\"].values,bootstrapconfig=bootstrapconfig)\n",
+    "std_boot,_,boot_vals = bootstrap.get_std_bootstrap(function=func,vx=df[f\"v{vel_x_var}\"].values,vy=df[f\"v{vel_y_var}\"].values,bootstrapconfig=bootstrapconfig)\n",
     "\n",
     "print(f\"Mean\\t MC: {np.mean(MC_values)}. Boot: {np.mean(boot_vals)}\")\n",
     "print(f\"Median\\t MC: {np.median(MC_values)}. Boot: {np.median(boot_vals)}\")\n",
@@ -736,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "originally_within_Rmax = df_errors[\"R\"] <= 3.5"
+    "originally_within_Rmax = df_MC[\"R\"] <= 3.5"
    ]
   },
   {
@@ -763,7 +764,7 @@
     "    for k in elements_dic:\n",
     "        condition,size,color,lw,edgecolor = elements_dic[k]\n",
     "\n",
-    "        ax.scatter(x=df_errors[condition][\"R\"], y=df_errors[condition][y_var], color=color, s=size, label=f\"{k} ({sum(condition)})\",lw=lw,edgecolor=edgecolor)\n",
+    "        ax.scatter(x=df_MC[condition][\"R\"], y=df_MC[condition][y_var], color=color, s=size, label=f\"{k} ({sum(condition)})\",lw=lw,edgecolor=edgecolor)\n",
     "\n",
     "    ax.axvline(x=3.5,color=\"grey\",lw=1,linestyle=\"--\")\n",
     "    ax.text(x=3.5+0.1,y=0.85*ax.get_ylim()[1], s=r\"$R=3.5~$kpc\",color=\"grey\",size=15)\n",
@@ -811,11 +812,11 @@
     "\n",
     "fig,ax=plt.subplots()\n",
     "\n",
-    "MC_d = np.random.normal(loc=df_errors[\"d\"],scale=df_errors[\"d_error\"] if \"d_error\" in df_errors else frac_error*df_errors[\"d\"]) # this is an example - in the std calculation this is calculated {repeats} number of times\n",
+    "MC_d = np.random.normal(loc=df_MC[\"d\"],scale=df_MC[\"d_error\"] if \"d_error\" in df_MC else frac_error*df_MC[\"d\"]) # this is an example - in the std calculation this is calculated {repeats} number of times\n",
     "\n",
     "ax.hist(MC_d,bins=bins,label=r\"MC $d$\")\n",
-    "ax.hist(df_errors[\"d\"],bins=bins,color=\"red\",alpha=0.4,label=r\"Original $d$\")\n",
-    "ax.hist(MC_d-df_errors[\"d\"],bins=bins,color=\"k\",histtype=\"step\",label=\"Difference\")\n",
+    "ax.hist(df_MC[\"d\"],bins=bins,color=\"red\",alpha=0.4,label=r\"Original $d$\")\n",
+    "ax.hist(MC_d-df_MC[\"d\"],bins=bins,color=\"k\",histtype=\"step\",label=\"Difference\")\n",
     "ax.set_xlabel(r\"$d$ [kpc]\"); ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
     "ax.legend()\n",
     "\n",
@@ -886,8 +887,8 @@
     "    bootstrap_errors = np.zeros(shape=(len(sampling_sizes),repeats),dtype=float)\n",
     "\n",
     "    for s,size in enumerate(sampling_sizes):\n",
-    "        errors[s],values[s],bootstrap_errors[s] = CE.get_std_bootstrap_recursive(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,\\\n",
-    "                                     bootstrapconfig=BootstrapConfig(bootstrap_size=size,repeats=repeats))\n",
+    "        errors[s],values[s],bootstrap_errors[s] = bootstrap.get_std_bootstrap_recursive(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,\\\n",
+    "                                     bootstrapconfig=BootstrapConfig(sample_size=size,repeats=repeats))\n",
     "        \n",
     "        if verbose:\n",
     "            print(size,end=\"; \")\n",
@@ -1859,7 +1860,7 @@
     "                    perturbed_vars_str = str.join(\",\",perturbed_vars)\n",
     "\n",
     "                    dic[func+f\"_MC_{perturbed_vars_str}_{frac}_error_low\"],dic[func+f\"_MC_{perturbed_vars_str}_{frac}_error_high\"],MC_values,_ =\\\n",
-    "                        CE.get_std_MC(df=df_MC,function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
+    "                        monte_carlo.get_std_MC(df=df_MC,function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
     "                                      montecarloconfig=montecarloconfig)\n",
     "\n",
     "                    print(f\"MC {perturbed_vars_str} errors {frac} frac:\",dic[func+f\"_MC_{perturbed_vars_str}_{frac}_error_low\"],dic[func+f\"_MC_{perturbed_vars_str}_{frac}_error_high\"])\n",
@@ -2681,7 +2682,7 @@
     "                std_low,std_high = np.zeros(shape=(len(sampling_sizes))),np.zeros(shape=(len(sampling_sizes)))\n",
     "\n",
     "                for i,mean in enumerate(mean_bootstrap_errors):\n",
-    "                    std_low[i],std_high[i] = CE.compute_lowhigh_std(central_value=mean, values=dic[func+\"_bootstrap_errors\"][i])\n",
+    "                    std_low[i],std_high[i] = error_helpers.compute_lowhigh_std(central_value=mean, values=dic[func+\"_bootstrap_errors\"][i])\n",
     "                \n",
     "                if show_percentile_sample_bootstrap_errors_surface:\n",
     "                    lax.fill_between(x=sampling_sizes, \\\n",
