--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -13,7 +13,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../../src/')"
+    "sys.path.append('../../')"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
+    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import miscellaneous_functions as MF\n",
-    "import mixed_plots as MP\n",
-    "import from_sim_to_numpy as sim_to_np"
+    "import utils.miscellaneous_functions as MF\n",
+    "import plotting.mixed_plots as MP\n",
+    "import utils.from_sim_to_numpy as sim_to_np"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "sim_to_np.load_process_and_save(simulation_path, save_path, angle_list=angle_list, pos_factor=pos_factor, zabs=zabs, GSR=GSR,R0=R0,\\\n",
-    "                                axisymmetric=axisymmetric,I_radius=I_radius,fileprefix=filename)"
+    "                                axisymmetric=axisymmetric,I_radius=I_radius,choice=filename)"
    ]
   },
   {
